# Projects

AI/Learning/: Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  test.cpp
Beat Name Formatter/: Beat Name Formatter.py
Blackjack CLI/: Makefile
Blackjack CLI/include/: bank.h  game.h  player.h  utils.h
Blackjack CLI/src/: bank.c  game.c  main.c  player.c  utils.c
C/Calculator/: Makefile  main.c
C/Calculator/Include/: Button.h
C/ECU/: Makefile  main.c
C/Throttle/: Makefile  main.c
Calculator/: Button.c  Calculator.cpp
Game Engine/Learning/Engine/Game/: Main.cpp
Game Engine/Learning/Engine/OGL3D/Include/OGL3D/Game/: OGame.hpp
Game Engine/Learning/Engine/OGL3D/Include/OGL3D/Window/: OWindow.hpp
Game Engine/Learning/Engine/OGL3D/Source/OGL3D/Game/: OGame.cpp
Game Engine/Learning/Engine/OGL3D/Source/OGL3D/Window/: OWindow.cpp
Game Engine/Learning/Engine/Source/Private/: WinMain.cpp
GameEngine/: CMakeLists.txt  compileCommand.txt
GameEngine/include/: EBO.h  VAO.h  VBO.h  shader.h
GameEngine/include/glad/: glad.h
GameEngine/shaders/: default.frag
GameEngine/src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shader.cpp
Poker CLI/include/: game.h  menu.h  utils.h
Poker CLI/src/: game.c  main.c  menu.c  utils.c
Python/Beat Name Formatter/: Beat Name Formatter.py
